--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "re-secure-random-string",
+  "name": "@ncthbrt/re-secure-random-string",
   "version": "0.1.0",
   "sources": [
     "src",
